# docs/swagger.yaml
@@ -28,6 +28,36 @@ definitions:
       time:
         type: string
     type: object
+  api.QuerySinglePeopleRes:
+    properties:
+      user_list:
+        items:
+          $ref: '#/definitions/api.UserRes'
+        type: array
+    type: object
+  api.RemoveSinglePersonReq:
+    properties:
+      user_id:
+        type: string
+    type: object
+  api.RemoveSinglePersonRes:
+    properties:
+      user_id:
+        type: string
+    type: object
+  api.UserRes:
+    properties:
+      date_num:
+        type: integer
+      gender:
+        type: integer
+      height:
+        type: number
+      id:
+        type: string
+      name:
+        type: string
+    type: object
 info:
   contact: {}
 paths:
@@ -64,13 +94,23 @@ paths:
       - application/json
       description: Find the most N possible matched single people, where N is a request
         parameter.
+      parameters:
+      - description: number to query
+        in: query
+        name: num
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            type: string
+            $ref: '#/definitions/api.QuerySinglePeopleRes'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/api.Err'
       summary: Query Single People.
       tags:
       - user
@@ -80,13 +120,24 @@ paths:
       - application/json
       description: Remove a user from the matching system so that the user cannot
         be matched anymore.
+      parameters:
+      - description: Remove user
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/api.RemoveSinglePersonReq'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            type: string
+            $ref: '#/definitions/api.RemoveSinglePersonRes'
+        default:
+          description: ""
+          schema:
+            $ref: '#/definitions/api.Err'
       summary: Remove a user.
       tags:
       - user
